<resources>
    <string name="app_name">SimpleSearchView Example</string>
    <string name="app_subtitle">SimpleSearchView</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="example">Example</string>
    <string name="custom_hint">Custom hint</string>
</resources>
